@@ -3075,7 +3075,7 @@ string_from_data (gpgme_data_t data, int delim,
 static gpgme_error_t
 gpg_import (void *engine, gpgme_data_t keydata, gpgme_key_t *keyarray,
             const char *keyids[], const char *import_filter,
-            const char *key_origin)
+            const char *import_options, const char *key_origin)
 {
   engine_gpg_t gpg = engine;
   gpgme_error_t err;
@@ -3090,6 +3090,12 @@ gpg_import (void *engine, gpgme_data_t keydata, gpgme_key_t *keyarray,
   if (keyids)
     {
       err = add_arg (gpg, "--recv-keys");
+      if (!err && import_options)
+        {
+          err = add_arg (gpg, "--import-options");
+          if (!err)
+            err = add_arg (gpg, import_options);
+        }
       if (!err && import_filter && have_gpg_version (gpg, "2.1.14"))
         {
           err = add_arg (gpg, "--import-filter");
@@ -3104,6 +3110,12 @@ gpg_import (void *engine, gpgme_data_t keydata, gpgme_key_t *keyarray,
   else if (keyarray)
     {
       err = add_arg (gpg, "--recv-keys");
+      if (!err && import_options)
+        {
+          err = add_arg (gpg, "--import-options");
+          if (!err)
+            err = add_arg (gpg, import_options);
+        }
       if (!err && import_filter && have_gpg_version (gpg, "2.1.14"))
         {
           err = add_arg (gpg, "--import-filter");
@@ -3141,6 +3153,12 @@ gpg_import (void *engine, gpgme_data_t keydata, gpgme_key_t *keyarray,
          should use an option to gpg to modify such commands (ala
          --multifile).  */
       err = add_arg (gpg, "--fetch-keys");
+      if (!err && import_options)
+        {
+          err = add_arg (gpg, "--import-options");
+          if (!err)
+            err = add_arg (gpg, import_options);
+        }
       if (!err && import_filter && have_gpg_version (gpg, "2.1.14"))
         {
           err = add_arg (gpg, "--import-filter");
@@ -3165,6 +3183,12 @@ gpg_import (void *engine, gpgme_data_t keydata, gpgme_key_t *keyarray,
   else
     {
       err = add_arg (gpg, "--import");
+      if (!err && import_options)
+        {
+          err = add_arg (gpg, "--import-options");
+          if (!err)
+            err = add_arg (gpg, import_options);
+        }
       if (!err && import_filter && have_gpg_version (gpg, "2.1.14"))
         {
           err = add_arg (gpg, "--import-filter");
