@@ -1795,7 +1795,7 @@ gpgsm_genkey (void *engine,
 static gpgme_error_t
 gpgsm_import (void *engine, gpgme_data_t keydata, gpgme_key_t *keyarray,
               const char *keyids[], const char *import_filter,
-              const char *key_origin)
+              const char *import_options, const char *key_origin)
 {
   engine_gpgsm_t gpgsm = engine;
   gpgme_error_t err;
@@ -1803,6 +1803,7 @@ gpgsm_import (void *engine, gpgme_data_t keydata, gpgme_key_t *keyarray,
   int idx;
 
   (void)import_filter;
+  (void)import_options;
   (void)key_origin;
 
   if (!gpgsm)
