@@ -858,7 +858,8 @@ _gpgme_engine_op_tofu_policy (engine_t engine,
 gpgme_error_t
 _gpgme_engine_op_import (engine_t engine, gpgme_data_t keydata,
                          gpgme_key_t *keyarray, const char *keyids[],
-                         const char *import_filter, const char *key_origin)
+                         const char *import_filter, const char *import_options,
+                         const char *key_origin)
 {
   if (!engine)
     return gpg_error (GPG_ERR_INV_VALUE);
@@ -867,7 +868,7 @@ _gpgme_engine_op_import (engine_t engine, gpgme_data_t keydata,
     return gpg_error (GPG_ERR_NOT_IMPLEMENTED);
 
   return (*engine->ops->import) (engine->engine, keydata, keyarray, keyids,
-                                 import_filter, key_origin);
+                                 import_filter, import_options, key_origin);
 }
 
 
