@@ -48,6 +48,7 @@ show_usage (int ex)
          "  --cms            use the CMS protocol\n"
          "  --offline        use offline mode\n"
          "  --key-origin     use the specified key origin\n"
+         "  --import-options use the specified import options\n"
          "  --url            import from given URLs\n"
          "  -0               URLs are delimited by a nul\n"
          , stderr);
@@ -65,6 +66,7 @@ main (int argc, char **argv)
   gpgme_import_result_t impres;
   gpgme_data_t data;
   gpgme_protocol_t protocol = GPGME_PROTOCOL_OpenPGP;
+  char *import_options = NULL;
   char *import_filter = NULL;
   char *key_origin = NULL;
   int offline = 0;
@@ -106,6 +108,14 @@ main (int argc, char **argv)
           protocol = GPGME_PROTOCOL_CMS;
           argc--; argv++;
         }
+      else if (!strcmp (*argv, "--import-options"))
+        {
+          argc--; argv++;
+          if (!argc)
+            show_usage (1);
+          import_options = strdup (*argv);
+          argc--; argv++;
+        }
       else if (!strcmp (*argv, "--import-filter"))
         {
           argc--; argv++;
@@ -143,6 +153,11 @@ main (int argc, char **argv)
 
   gpgme_set_offline (ctx, offline);
 
+  if (import_options)
+    {
+      err = gpgme_set_ctx_flag (ctx, "import-options", import_options);
+      fail_if_err (err);
+    }
   if (import_filter)
     {
       err = gpgme_set_ctx_flag (ctx, "import-filter", import_filter);
